--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/node": "^24.10.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "@prisma/client": "^7.0.1",
@@ -20,5 +12,10 @@
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "prisma": "^7.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   }
 }
