ccommit run serve

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "pg": "^8.16.3",
-    "prisma": "^7.0.1"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
